- В БД сохраняется правильный filePath. Выгрузка из БД через Swagger по прежнему не работает. Нужны правки.