@@ -14,6 +14,8 @@ import java.awt.image.BufferedImage;
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
 import java.util.Objects;
 
 import static java.nio.file.StandardOpenOption.CREATE_NEW;
@@ -24,8 +26,10 @@ import static java.nio.file.StandardOpenOption.CREATE_NEW;
 @Service
 @Transactional
 public class PhotoReportService {
-    @Value("/photoReports")
-    String reportDir;
+
+    @Value("${photoReports.directory}") // Правильный способ использования значения из application.properties
+    private String reportDir;
+
     private final PhotoReportRepository photoReportRepository;
     private final ReportService reportService;
 
@@ -37,17 +41,15 @@ public class PhotoReportService {
 
     public void uploadCover(Long reportId, MultipartFile file) throws IOException {
         Report report = reportService.findReportById(reportId);
-        Path filePath = Path.of(reportDir,reportId + "." + getExtension(Objects.requireNonNull(file.getOriginalFilename())));
+        Path filePath = Paths.get(reportDir, reportId + "." + getExtension(Objects.requireNonNull(file.getOriginalFilename())));
         Files.createDirectories(filePath.getParent());
         Files.deleteIfExists(filePath);
 
-        try(InputStream is = file.getInputStream();
-            OutputStream os = Files.newOutputStream(filePath, CREATE_NEW);
-            BufferedInputStream bis = new BufferedInputStream(is, 1024);
-            BufferedOutputStream bos = new BufferedOutputStream(os, 1024);
-        ) {
-            bis.transferTo(bos);
+        try (InputStream is = file.getInputStream();
+             OutputStream os = Files.newOutputStream(filePath, StandardOpenOption.CREATE_NEW)) {
+            is.transferTo(os);
         }
+
         PhotoReport photoReport = findPicture(reportId);
         photoReport.setReport(report);
         photoReport.setFilePath(filePath.toString());
@@ -56,6 +58,7 @@ public class PhotoReportService {
         photoReport.setData(generateImagePreview(filePath));
         photoReportRepository.save(photoReport);
     }
+
     public PhotoReport findPicture(Long reportId) {
         return photoReportRepository.findByReportId(reportId).orElse(new PhotoReport());
     }
